Various bug fixes related to menu not showing up

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -163,9 +163,12 @@ nav {
     border-left: 0px solid transparent;
     border-right: 100px solid transparent;
   }
+  .trap-heading {
+    padding-top:100px;
+  }
 
   .trap-content {
-     padding-top:50px;
+     padding-top:40px;
      padding-bottom:20px;
   }
 }
@@ -176,16 +179,24 @@ nav {
   }
 
   .trap-content {
-     padding-bottom:0px;
+     padding-bottom:10px;
   }
 
   .trap-heading {
     padding-top:230px;
   }
+
+  .nav{
+    background-color: #f8f8f8;
+    padding:20px;
+    box-shadow: 0 2px 4px -2px rgba(0,0,0,0.25);
+  }
+
+.nav li:hover {
+
 }
 
-
-@media (max-width: 400px) {
+@media (max-width: 350px) {
   #navbar-title {
     visibility: hidden;
     font-size:0pt;
